...
                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jyU-L0-z7R" userLabel="joinGameButton">
                                        <rect key="frame" x="87" y="293" width="175" height="50"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                        <color key="backgroundColor" red="0.46274509803921571" green="0.49411764705882355" blue="0.50588235294117645" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <state key="normal" title="Join Game"/>
                                        <connections>
                                            <action selector="joinGame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lXB-tc-niO"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uzh-OR-iQ6" userLabel="createGameButton">
                                        <rect key="frame" x="87" y="229" width="175" height="50"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                        <color key="backgroundColor" red="0.46274509803921571" green="0.49411764705882355" blue="0.50588235294117645" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <state key="normal" title="Start Game"/>
                                        <connections>
                                            <action selector="createGame:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hgY-P9-Ycn"/>
                                        </connections>
                                    </button>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sTo-C9-tj3" userLabel="usernameField">
                                        <rect key="frame" x="88" y="159" width="175" height="50"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
...
            </objects>
            <point key="canvasLocation" x="-919.20000000000005" y="141.67916041979012"/>
        </scene>
        <!--Sources-->
        <scene sceneID="czf-60-N9S">
            <objects>
                <collectionViewController id="WQm-XW-lq9" userLabel="Sources" customClass="SourcesVC" customModule="Mundus_ios" customModuleProvider="target" sceneMemberID="viewController">
                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" id="tB1-8v-MPN">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="8" minimumInteritemSpacing="8" id="a35-tm-vVG">
                            <size key="itemSize" width="140" height="159"/>
...
                                <rect key="frame" x="99" y="182" width="175" height="50"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="1" green="0.72007614170000001" blue="0.1896825831" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
                                <state key="normal" title="Pause"/>
                                <connections>
                                    <action selector="changeStateClicked:" destination="leO-Fe-8AC" eventType="touchUpInside" id="DG0-dC-v25"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rM8-le-Nts">
                                <rect key="frame" x="99" y="240" width="175" height="50"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="0.90201735500000002" green="0.059020614710000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="contentEdgeInsets" minX="5" minY="5" maxX="5" maxY="5"/>
                                <state key="normal" title="Delete">
                                    <color key="titleColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="deleteClicked:" destination="leO-Fe-8AC" eventType="touchUpInside" id="ZWi-xG-X5u"/>
                                </connections>
                            </button>
...
