...

    var cellDataArrray = [CellData]()
    var players: NSMutableArray = NSMutableArray()

    required init?(coder aDecoder: NSCoder) {
        super.init(coder: aDecoder)
        tabBarItem = UITabBarItem(title: "Publications", image: UIImage(named: "publications"), tag: 1)
    }

    override func tableView(_ tableView: UITableView, numberOfRowsInSection section: Int) -> Int {
        return players.count
    }

...
