...
        let alert = UIAlertController(title: "Naam", message: "Kies alstublieft een naam", preferredStyle: .alert)

        alert.addTextField { (textField) in
            textField.text = "naam"
        }
        var textString = ""
        alert.addAction(UIAlertAction(title: "OK", style: .default, handler: { [weak alert] (_) in
            let textField = alert!.textFields![0] // Force unwrapping because we know it exists.
            textString = textField.text!
            print("Text field: \(textField.text)")
            self.createGameRequest(textString: textString)
        }))

...
